--- a/Home.html
+++ b/Home.html
@@ -2,16 +2,6 @@
 <html>
     <head>
                 <link rel="stylesheet" type="text/css" href=Home.css>
-                <!--<script type="text/javascript">
-                    function report(){
-                        search = document.getElementById('search').value;
-                        switch(search){
-                            case "Vault7":case "Vault 7":case "vault7":case "vault 7":
-                                document.getElementById('grey');
-                            break;
-                        }
-                    }
-                </script>-->
     <title>Welcome! To whistler.</title>
     </head>
     <table id="options">
@@ -91,19 +81,9 @@
             </a>
         
         <br><br><br>
-        <!---        <div id="search">
-            <h1>Search:</h1>
-            <form>
-            <input type="text" id="search">
-            </form>
-            <button onclick="report()">Search</button>
-        </div>
-            <div id="report">
-
-            </div>--->
-        </div>
 
     </body>
-    <footer>
+    <footer id="footer">
+        
     </footer>
 </html>
