--- a/Vault8report.html
+++ b/Vault8report.html
@@ -10,10 +10,10 @@
 	<div id="b">
 	<table id="b">
 		<tr>
-		<td><a href="Home.html" target="-blank">HOME</a></td>
-		<td><a href="www.youtube.com" target="-blank">DONATION</a></td>
-		<td><a href="wwww.yahoo.com" target="-blank">SUBMISSION</a></td>
-		<td><a href="" target="-blank">FEEDBACK</a></td>
+		<td><a href="Home.html">HOME</a></td>
+		<td><a href="Donation.html">DONATION</a></td>
+		<td><a href="Submission.html">SUBMISSION</a></td>
+		<td><a href="Feedback.html">FEEDBACK</a></td>
 		</tr>
 	</table>
 	</div>
