--- a/Donation.html
+++ b/Donation.html
@@ -13,13 +13,13 @@
         <div id="home"></div>
         </td>
         <td>
-        <div ><a href=Home.html>HOME</a></div>
+        <div ><a href="Home.html">HOME</a></div>
         </td>
         <td>
-        <div id="sub">SUBMISSION</div>
+        <div id="sub"><a href="Submission.html">SUBMISSION</a></div>
         </td>
         <td>
-        <div id="feed">FEEDBACK</div>
+        <div id="feed"><a href="Feedback.html">FEEDBACK</a></div>
         </td>
         </tr>
     </table>
