--- a/Donation.html
+++ b/Donation.html
@@ -13,7 +13,7 @@
         <div id="home"></div>
         </td>
         <td>
-        <div ><a href="Home.html">HOME</a></div>
+        <div ><a href="index.html">HOME</a></div>
         </td>
         <td>
         <div id="sub"><a href="Submission.html">SUBMISSION</a></div>
