--- a/Feedback.HTML
+++ b/Feedback.HTML
@@ -11,7 +11,7 @@
         <div id="logo"><img src="plastic-whistle-black.png"></div>
         </td>
         <td>
-        <div id="home"><a href="Home.html">HOME</a></div>
+        <div id="home"><a href="index.html">HOME</a></div>
         </td>
         <td>
         <div id="don"><a href="Donation.html">DONATION</a></div>
