--- a/Submission.html
+++ b/Submission.html
@@ -10,7 +10,7 @@
 	<div id="b">
 	<table id="b">
 		<tr>
-		<td><a href="Home.html" target="-blank">HOME</a></td>
+		<td><a href="index.html" target="-blank">HOME</a></td>
 		<td><a href="Donation.html" target="-blank">DONATION</a></td>
 		<td><a href="Feedback.HTML" target="-blank">FEEDBACK</a></td>
 		</tr>
