--- a/Vault8report.html
+++ b/Vault8report.html
@@ -10,7 +10,7 @@
 	<div id="b">
 	<table id="b">
 		<tr>
-		<td><a href="Home.html">HOME</a></td>
+		<td><a href="index.html">HOME</a></td>
 		<td><a href="Donation.html">DONATION</a></td>
 		<td><a href="Submission.html">SUBMISSION</a></td>
 		<td><a href="Feedback.html">FEEDBACK</a></td>
