--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <header id="header">
                 <link rel="stylesheet" type="text/css" href=Home.css>
     <title>Welcome! To whistler.</title>
-    </head>
     <table id="options">
         <tr>
         <td>
         <div id="logo"><img src="plastic-whistle-black.png"></div>
         </td>
         <td>
-        <div id="home"></div>
+
         </td>
         <td>
         <div id="don"><a href="Donation.html">DONATION</a></div>
@@ -23,6 +22,7 @@
         </td>
         </tr>
     </table>
+    </header>
     <body>
             <a href="spyfiles.html">
             <div id="spy">
@@ -83,7 +83,12 @@
         <br><br><br>
 
     </body>
-    <footer id="footer">
-        
+    <footer>
+    <div id="footer">
+    <a href=""><div id="icon1"><img src="facebook.png" width="50px" height="50px"></div></a>
+    <a href=""><div id="icon2"><img src="twitter.png" width="50px" height="50px"></div></a>
+    <a href=""><div id="icon3"><img src="reddit.png" width="50px" height="50px"></div></a>
+    <a href=""><div id="icon4"><img src="google-plus.png" width="50px" height="50px"></div></a>
+    </div>
     </footer>
 </html>
